--- a/package.json
+++ b/package.json
@@ -14,11 +14,13 @@
     "react-quill": "^1.3.5",
     "react-router-dom": "^5.2.0",
     "react-scripts": "^2.1.8",
+    "serve": "^12.0.0",
     "striptags": "^3.2.0",
     "web-vitals": "^1.0.1"
   },
   "scripts": {
-    "start": "react-scripts start",
+    "start":"serve -s build",
+    "dev": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
